ordering and how to

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -40,10 +40,9 @@
             <ul>
                 <li class="unitInfo"><h2 id="unitTitle">Please select a unit</h2></li>
                 <li class="unitInfo"><a id="moreUnitInfo">&#9432;</a></li>
-                <li class="unitInfo"><input type="submit" value="Save All" id="saveTopics"></li>
+                <li class="unitInfo"><input type="submit" value="Save" id="saveTopics"></li>
                 <li class="topicInfo"><input type="submit" value="Delete" id="deleteTopic"></li>
                 <li class="topicInfo"><input type="submit" value="Add Note" id="addNote"></li>
-                <li class="topicInfo" ><input type="submit" value="Save new topic" id="saveTopic"></li>
                 <li class="topicInfo">
                     <label>Number of weeks:</label>
                     <input id="tWeeks" type="number" placeholder="Weeks"/>
